文件部分命令改进

--- a/sisOS/Makefile
+++ b/sisOS/Makefile
@@ -183,6 +183,12 @@ UPROGS=\
 	_zombie\
 	_fmd\
         _find\
+	_mv\
+	_touch\
+	_head\
+	_tail\
+	_splice\
+	_rename\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
@@ -252,6 +258,7 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 EXTRA=\
 	mkfs.c ulib.c user.h cat.c echo.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c usertests.c wc.c find.c zombie.c\
+	mv.c touch.c head.c tail.c splice.c rename.c\
 	printf.c umalloc.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
 	.gdbinit.tmpl gdbutil\
