还是文件部分

--- a/sisOS/Makefile
+++ b/sisOS/Makefile
@@ -23,9 +23,9 @@ OBJS = \
 	sysfile.o\
 	sysproc.o\
 	trapasm.o\
+	vectors.o\
 	trap.o\
 	uart.o\
-	vectors.o\
 	vm.o\
 
 # Cross-compiling (e.g., on Mac OS X)
@@ -51,7 +51,7 @@ TOOLPREFIX := $(shell if i386-jos-elf-objdump -i 2>&1 | grep '^elf32-i386$$' >/d
 endif
 
 # If the makefile can't find QEMU, specify its path here
-# QEMU = qemu-system-i386
+QEMU = qemu-system-i386
 
 # Try to infer the correct QEMU
 ifndef QEMU
@@ -181,9 +181,14 @@ UPROGS=\
 	_usertests\
 	_wc\
 	_zombie\
-	_ps\
-	_chpr\
-	_myfork\
+	_fmd\
+        _find\
+	_mv\
+	_touch\
+	_head\
+	_tail\
+	_splice\
+	_rename\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
@@ -252,7 +257,8 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 
 EXTRA=\
 	mkfs.c ulib.c user.h cat.c echo.c forktest.c grep.c kill.c\
-	ln.c ls.c mkdir.c rm.c stressfs.c usertests.c wc.c zombie.c ps.c chpr.c myfork.c\
+	ln.c ls.c mkdir.c rm.c stressfs.c usertests.c wc.c find.c zombie.c\
+	mv.c touch.c head.c tail.c splice.c rename.c\
 	printf.c umalloc.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
 	.gdbinit.tmpl gdbutil\
